--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,13 @@
   "devDependencies": {
     "nodemon": "^1.18.9",
     "typescript": "^3.3.1"
+  },
+  "dependencies": {
+    "@types/express": "^4.16.1",
+    "@types/jsdom": "^12.2.1",
+    "@types/morgan": "^1.7.35",
+    "express": "^4.16.4",
+    "jsdom": "^13.2.0",
+    "morgan": "^1.9.1"
   }
 }
